[gd_scene load_steps=8 format=3 uid="uid://bmk4hp81p2nms"]

[ext_resource type="StyleBox" uid="uid://brbnp5ypofkai" path="res://styles/genericButtonStyle.tres" id="1_8t7lp"]
[ext_resource type="Script" path="res://scripts/game_scene.gd" id="1_gw4ip"]
[ext_resource type="Texture2D" uid="uid://byvxalycbbti" path="res://assets/scissors.svg" id="2_8kvg4"]
[ext_resource type="Texture2D" uid="uid://do0e1fi0d7gwt" path="res://assets/paper.png" id="3_mefa6"]
[ext_resource type="Texture2D" uid="uid://bldp7pwim5fy2" path="res://assets/rock.png" id="4_1dh6q"]
[ext_resource type="Shader" path="res://shaders/havingFun.gdshader" id="6_yueav"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8dhnu"]
shader = ExtResource("6_yueav")
shader_parameter/block_color = Color(0.141176, 0.152941, 0.168627, 1)
shader_parameter/block_width = 0.07
shader_parameter/triangle_size_pixels = 33.258
shader_parameter/wave_offset = 0.404

[node name="GameScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_gw4ip")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.290196, 0.321569, 0.352941, 1)

[node name="ResultLabel" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerNameLabel" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -0.5
offset_top = -241.0
offset_right = 0.5
offset_bottom = -153.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
vertical_alignment = 1

[node name="OpponentNameLabel" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -0.5
offset_right = 0.5
offset_bottom = 23.0
grow_horizontal = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
vertical_alignment = 1

[node name="Background2" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_8dhnu")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.925353, 0.925353, 0.925353, 1)
metadata/_edit_lock_ = true

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -219.5
offset_top = -136.0
offset_right = 219.5
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/h_separation = 25
columns = 3

[node name="Scissors" type="Button" parent="GridContainer"]
z_index = 420
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme_override_styles/focus = ExtResource("1_8t7lp")
theme_override_styles/disabled_mirrored = ExtResource("1_8t7lp")
theme_override_styles/disabled = ExtResource("1_8t7lp")
theme_override_styles/hover_pressed_mirrored = ExtResource("1_8t7lp")
theme_override_styles/hover_pressed = ExtResource("1_8t7lp")
theme_override_styles/hover_mirrored = ExtResource("1_8t7lp")
theme_override_styles/hover = ExtResource("1_8t7lp")
theme_override_styles/pressed_mirrored = ExtResource("1_8t7lp")
theme_override_styles/pressed = ExtResource("1_8t7lp")
theme_override_styles/normal_mirrored = ExtResource("1_8t7lp")
theme_override_styles/normal = ExtResource("1_8t7lp")
icon = ExtResource("2_8kvg4")
expand_icon = true

[node name="Paper" type="Button" parent="GridContainer"]
z_index = 420
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme_override_styles/focus = ExtResource("1_8t7lp")
theme_override_styles/disabled_mirrored = ExtResource("1_8t7lp")
theme_override_styles/disabled = ExtResource("1_8t7lp")
theme_override_styles/hover_pressed_mirrored = ExtResource("1_8t7lp")
theme_override_styles/hover_pressed = ExtResource("1_8t7lp")
theme_override_styles/hover_mirrored = ExtResource("1_8t7lp")
theme_override_styles/hover = ExtResource("1_8t7lp")
theme_override_styles/pressed_mirrored = ExtResource("1_8t7lp")
theme_override_styles/pressed = ExtResource("1_8t7lp")
theme_override_styles/normal_mirrored = ExtResource("1_8t7lp")
theme_override_styles/normal = ExtResource("1_8t7lp")
icon = ExtResource("3_mefa6")
expand_icon = true

[node name="Rock" type="Button" parent="GridContainer"]
z_index = 420
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme_override_styles/focus = ExtResource("1_8t7lp")
theme_override_styles/disabled_mirrored = ExtResource("1_8t7lp")
theme_override_styles/disabled = ExtResource("1_8t7lp")
theme_override_styles/hover_pressed_mirrored = ExtResource("1_8t7lp")
theme_override_styles/hover_pressed = ExtResource("1_8t7lp")
theme_override_styles/hover_mirrored = ExtResource("1_8t7lp")
theme_override_styles/hover = ExtResource("1_8t7lp")
theme_override_styles/pressed_mirrored = ExtResource("1_8t7lp")
theme_override_styles/pressed = ExtResource("1_8t7lp")
theme_override_styles/normal_mirrored = ExtResource("1_8t7lp")
theme_override_styles/normal = ExtResource("1_8t7lp")
icon = ExtResource("4_1dh6q")
expand_icon = true
